--- a/bootloader/EFI/BOOT/grub.cfg
+++ b/bootloader/EFI/BOOT/grub.cfg
@@ -1,17 +1,28 @@
 set default="0"
-set timeout=2
+set timeout=1
 menuentry 'AOSP@720P' {
+    search.fs_label boot root
+    set root=($root)
     linux /Image console=ttyAMA3,115200 androidboot.console=ttyAMA3 androidboot.hardware=hikey firmware_class.path=/system/etc/firmware efi=noruntime video=HDMI-A-1:1280x720@60 androidboot.selinux=permissive
     initrd /ramdisk.img
     devicetree /hi6220-hikey.dtb
 }
 menuentry 'AOSP@SVGA' {
+    search.fs_label boot root
+    set root=($root)
     linux /Image console=ttyAMA3,115200 androidboot.console=ttyAMA3 androidboot.hardware=hikey firmware_class.path=/system/etc/firmware efi=noruntime video=HDMI-A-1:800x600@60 androidboot.selinux=permissive
     initrd /ramdisk.img
     devicetree /hi6220-hikey.dtb
 }
 menuentry 'AOSP' {
+    search.fs_label boot root
+    set root=($root)
     linux /Image console=ttyAMA3,115200 androidboot.console=ttyAMA3 androidboot.hardware=hikey firmware_class.path=/system/etc/firmware efi=noruntime androidboot.selinux=permissive
     initrd /ramdisk.img
     devicetree /hi6220-hikey.dtb
+}
+
+menuentry 'Fastboot' {
+    search.fs_label boot root
+    chainloader ($root)/EFI/BOOT/fastboot.efi
 }
