Revert "Remove references to deleted dhcpcd"
This reverts commit 7b2cbd478e94f28b2fa7e7ff355366dc5146f4f2.

--- a/init.hikey.rc
+++ b/init.hikey.rc
@@ -92,3 +92,17 @@ service wpa_supplicant /system/bin/wpa_supplicant \
      disabled
      oneshot
 
+service dhcpcd_wlan0 /system/bin/dhcpcd -dABKL
+     group dhcp
+     disabled
+     oneshot
+
+service dhcpcd_eth0 /system/bin/dhcpcd -dABKL
+     group dhcp
+     disabled
+     oneshot
+
+service dhcpcd_bt-pan /system/bin/dhcpcd -dABKL
+     group dhcp
+     disabled
+     oneshot
