hikey: Enable USB tethering support
Enable USB tethering on Hikey with WiFi (wlan0) interface.

Change-Id: I039339cb92b92fe59ba431c54894902245e97181
Signed-off-by: Amit Pundir <amit.pundir@linaro.org>

--- a/init.hikey.rc
+++ b/init.hikey.rc
@@ -108,6 +108,16 @@ service dhcpcd_eth0 /system/bin/dhcpcd -dABKL
      disabled
      oneshot
 
+service dhcpcd_usb0 /system/bin/dhcpcd -dABKL
+     group dhcp
+     disabled
+     oneshot
+
+service iprenew_usb0 /system/bin/dhcpcd -n
+    class main
+    disabled
+    oneshot
+
 service dhcpcd_bt-pan /system/bin/dhcpcd -dABKL
      group dhcp
      disabled
