init.hikey.rc: set right user and group for uim service
to avoid the following SELinux avc dac_override denial:
avc: denied { dac_override } for pid=1790 comm="uim" capability=1 scontext=u:r:hci_attach:s0 tcontext=u:r:hci_attach:s0 tclass=capability permissive=1

Change-Id: Ia0ff7ffbeac155fbc43b52c2ddc880d35c52a654
Signed-off-by: Yongqin Liu <yongqin.liu@linaro.org>

--- a/init.hikey.rc
+++ b/init.hikey.rc
@@ -87,7 +87,8 @@ on property:usb_speed.switch=full
 #userspace daemon needed for bluetooth
 service uim /system/bin/uim
     class main
-    user root
+    user bluetooth
+    group bluetooth net_bt_admin system net_bt_stack
     oneshot
 
 service wpa_supplicant /system/bin/wpa_supplicant \
