hikey: Fix stune path, as it changed with N
In N the stune cgroup is mounted under /dev/stune
instead of /sys/fs/cgroup/stune, so update the
path names.

Change-Id: Ic70da960e0d0ddd7a2286ecbfa074283bd36e921
Signed-off-by: John Stultz <john.stultz@linaro.org>

--- a/init.hikey.rc
+++ b/init.hikey.rc
@@ -66,10 +66,10 @@ on post-fs
     #
     # EAS stune boosting interfaces
     #
-    chown system system /sys/fs/cgroup/stune/foreground/schedtune.boost
-    chown system system /sys/fs/cgroup/stune/schedtune.boost
-    write /sys/fs/cgroup/stune/foreground/schedtune.boost 10
-    write /sys/fs/cgroup/stune/schedtune.boost 0
+    chown system system /dev/stune/foreground/schedtune.boost
+    chown system system /dev/stune/schedtune.boost
+    write /dev/stune/foreground/schedtune.boost 10
+    write /dev/stune/schedtune.boost 0
 
 
 # enable Google-specific location features,
