hikey: Enable prefer_idle for schedtune's foregroung cgroup
Change-Id: Ie52b118a7ac018107da60a95482fa67c471b991d
Signed-off-by: Andres Oportus <andresoportus@google.com>

--- a/init.hikey.rc
+++ b/init.hikey.rc
@@ -67,8 +67,10 @@ on post-fs
     # EAS stune boosting interfaces
     #
     chown system system /dev/stune/foreground/schedtune.boost
+    chown system system /dev/stune/foreground/schedtune.prefer_idle
     chown system system /dev/stune/schedtune.boost
     write /dev/stune/foreground/schedtune.boost 10
+    write /dev/stune/foreground/schedtune.prefer_idle 1
     write /dev/stune/schedtune.boost 0
 
 
