Remove net_bt_stack group and replace it with bluetooth
Bug: 31549206
Change-Id: Ie0f68ff65712c8ed930fd0e3547e0dd84ae7dcfe

--- a/init.hikey.rc
+++ b/init.hikey.rc
@@ -91,7 +91,7 @@ on property:usb_speed.switch=full
 service uim /system/bin/uim
     class main
     user bluetooth
-    group bluetooth net_bt_admin system net_bt_stack
+    group bluetooth net_bt_admin system
     oneshot
 
 service wpa_supplicant /system/bin/wpa_supplicant \
