--- a/ueventd.hikey.rc
+++ b/ueventd.hikey.rc
@@ -1,3 +1,3 @@
 /dev/hci_tty     0666 root root
-/dev/ttyAMA1     0660 bluetooth net_bt_stack
+/dev/ttyAMA1     0660 bluetooth bluetooth
 /dev/mali        0666 system graphics
