hikey: restructure hikey device configuration
No functional changes. Just moved around the configuration files and
restructured them to support future hikey family devices. Similar to
how Marlin and Sailfish devices are configured.

Split the board configuration into BoardConfigCommon.mk (for common
configuration) and hikey/BoardConfig.mk (for hikey specific
configuration e.g. Image sizes and kernel commandline).
Similarly split device.mk into device-common.mk and hikey/device-hikey.mk.
Updated hikey.mk to include both device-common.mk and hikey/device-hikey.mk.
Renamed init.hikey.rc to init.common.rc and modified it to import
init.${ro.hardware}.usb.rc and mount fstab.${ro.hardware} instead.

Changes to be committed:
renamed:	BoardConfig.mk => BoardConfigCommon.mk (68%)
renamed:	hikey.kl => common.kl (100%)
renamed:	device.mk => device-common.mk (74%)
modified:	hikey.mk
new file:	hikey/BoardConfig.mk
renamed:	board-info.txt => hikey/board-info.txt (100%)
new file:	hikey/device-hikey.mk
renamed:	fstab.hikey => hikey/fstab.hikey (100%)
renamed:	fstab.hikey-4.1 => hikey/fstab.hikey-4.1 (100%)
renamed:	init.hikey.rc => init.common.rc (97%)
renamed:	init.hikey.usb.rc => init.common.usb.rc (100%)
renamed:	ueventd.hikey.rc => ueventd.common.rc (100%)

Test: Manual

Change-Id: I032323aa8846a3bc144e40b4b5e5348c8f8d11c5
Signed-off-by: Amit Pundir <amit.pundir@linaro.org>
Signed-off-by: Dmitry Shmidt <dimitrysh@google.com>

--- a/init.common.rc
+++ b/init.common.rc
@@ -1,4 +1,4 @@
-import init.hikey.usb.rc
+import init.${ro.hardware}.usb.rc
 
 on init
     # mount debugfs
@@ -12,7 +12,7 @@ on init
     write /proc/sys/kernel/randomize_va_space 0
 
 on fs
-    mount_all /fstab.hikey
+    mount_all /fstab.${ro.hardware}
     setprop ro.crypto.fuse_sdcard false
 
 on post-fs-data
