--- a/init.common.rc
+++ b/init.common.rc
@@ -66,10 +66,15 @@ on post-fs
     #
     # EAS stune boosting interfaces
     #
+    chown system system /dev/stune/top-app/schedtune.boost
+    chown system system /dev/stune/top-app/schedtune.prefer_idle
     chown system system /dev/stune/foreground/schedtune.boost
     chown system system /dev/stune/foreground/schedtune.prefer_idle
     chown system system /dev/stune/schedtune.boost
-    write /dev/stune/foreground/schedtune.boost 10
+
+    write /dev/stune/top-app/schedtune.boost 10
+    write /dev/stune/top-app/schedtune.prefer_idle 1
+    write /dev/stune/foreground/schedtune.boost 0
     write /dev/stune/foreground/schedtune.prefer_idle 1
     write /dev/stune/schedtune.boost 0
 
