generate_ptable.sh add swap-8g (aosp + 1.5GB of swap)
Partition Name  Block Device  Size blocks & bytes  Start block
vrl         /dev/block/mmcblk0p1     2048 1MB        2048
vrl_backup  /dev/block/mmcblk0p2     2048 1MB        4096
mcuimage    /dev/block/mmcblk0p3     2048 1MB        6144
fastboot    /dev/block/mmcblk0p4    16384 8MB        8192
nvme        /dev/block/mmcblk0p5     4096 2MB       24576
---- below differs from aosp-8g ----
boot        /dev/block/mmcblk0p6   131072 64MB      28672
cache       /dev/block/mmcblk0p7   524288 256MB    159744
swap        /dev/block/mmcblk0p8  3145728 1.5GB    684032
system      /dev/block/mmcblk0p9 3145728 1.5GB   3829760
userdata    /dev/block/mmcblk0p10 8294367 4.0GB   6975488

If flashing over from aosp-8g with flashall, make sure cache is
flashed first since it changed location and would otherwise be
untouched. userdata image is constructed correctly for the smaller
with: make TARGET_WITH_SWAP=true.

Test: manual flash ptable and flashall -w, hikey boots.
Bug: 38446744
Change-Id: Ib27f4d8ab9c756f220bc7da049e550e6c7d46dfc

--- a/l-loader/Makefile
+++ b/l-loader/Makefile
@@ -4,7 +4,7 @@ CFLAGS=-march=armv7-a
 LD=$(CROSS_COMPILE)ld
 OBJCOPY=$(CROSS_COMPILE)objcopy
 BL1=bl1.bin
-PTABLE_LST:=aosp-4g aosp-8g linux-4g linux-8g
+PTABLE_LST:=aosp-4g aosp-8g linux-4g linux-8g swap-8g
 
 all: l-loader.bin ptable.img
 
