bootloader: clean build directories for make clean command
Test: Manual (make clean)

Change-Id: Ie44c93ec393b6b0674dd0dbbd2219b8395e197b9
Signed-off-by: Vishal Bhoj <vishal.bhoj@linaro.org>

--- a/bootloader/Makefile
+++ b/bootloader/Makefile
@@ -35,5 +35,4 @@ $(DIST_DIR)/l-loader.bin: $(DIST_DIR)/fip.bin
 	mv l-loader.bin $(DIST_DIR)/
 
 clean:
-	rm -rf $(DIST_DIR)/fip.bin $(DIST_DIR)/l-loader.bin
-
+	rm -rf $(DIST_DIR)/fip.bin $(DIST_DIR)/l-loader.bin $(ANDROID_BUILD_TOP)/$(PRODUCT_OUT)/obj/uefi $(EDK2_DIR)/Build/HiKey
