hikey: bootloader: Further make clean fixes
Make sure we also clean out the edk BaseTools dir.

Change-Id: I38b92148f8f0e2735ddb93853b46253d2467fa6b
Signed-off-by: John Stultz <john.stultz@linaro.org>

--- a/bootloader/Makefile
+++ b/bootloader/Makefile
@@ -36,3 +36,4 @@ $(DIST_DIR)/l-loader.bin: $(DIST_DIR)/fip.bin
 
 clean:
 	rm -rf $(DIST_DIR)/fip.bin $(DIST_DIR)/l-loader.bin $(ANDROID_BUILD_TOP)/$(PRODUCT_OUT)/obj/uefi $(EDK2_DIR)/Build/HiKey
+	cd $(EDK2_DIR)/BaseTools && make clean
