hikey: l-loader: Add new gen_loader_hikey.py and recovery fastboot binary
With updated bootloader builds, we need to include a recovery fastboot
binary. This binary can be generated from the source tree here:
https://github.com/96boards-hikey/atf-fastboot/tree/master

But there isn't much value in adding that tree to AOSP, as not
many folks will probably want to modify/rebuild the recovery fastboot
app.

Change-Id: Id6cff740ba74242d8f54d81e98f3ed1f18c71eae
Signed-off-by: John Stultz <john.stultz@linaro.org>

--- a/l-loader/Makefile
+++ b/l-loader/Makefile
@@ -14,7 +14,7 @@ all: l-loader.bin ptable.img
 l-loader.bin: start.o $(BL1)
 	$(LD) -Bstatic -Tl-loader.lds -Ttext 0xf9800800 start.o -o loader
 	$(OBJCOPY) -O binary loader temp
-	python gen_loader.py -o $@ --img_loader=temp --img_bl1=$(BL1)
+	python gen_loader_hikey.py -o $@ --img_loader=temp --img_bl1=$(BL1) --img_ns_bl1u=recovery-fastboot.bin
 	rm -f loader temp
 
 ptable.img:
