hikey: l-loader: Update generate_ptable.sh and Makefiles
The ptable format has changed for newer bootloaders,
so update the generation and build script.

This syncs the l-loader code to match
f986003d5732348db3a0329d2ed6863aa9d0ae9e from:
https://github.com/96boards-hikey/l-loader.git

Along with some minor tweaks to keep it building in the AOSP
environment.

Change-Id: Iad73e4ac63e0ccc78975d82f16983225bcfaea2b
Signed-off-by: John Stultz <john.stultz@linaro.org>

--- a/l-loader/Makefile
+++ b/l-loader/Makefile
@@ -1,27 +1,15 @@
-CROSS_COMPILE?=arm-linux-gnueabihf-
-CC=$(CROSS_COMPILE)gcc
-CFLAGS=-march=armv7-a
-LD=$(CROSS_COMPILE)ld
-OBJCOPY=$(CROSS_COMPILE)objcopy
-BL1=bl1.bin
-PTABLE_LST:=aosp-4g aosp-8g linux-4g linux-8g swap-8g
+.PHONY: hikey
+hikey:
+	$(MAKE) -f hikey.mk
 
-all: l-loader.bin ptable.img
+.PHONY: hikey-clean
+hikey-clean:
+	$(MAKE) -f hikey.mk clean
 
-%.o: %.S $(DEPS)
-	$(CC) $(CFLAGS) -c -o $@ $<
+.PHONY: hikey960
+hikey960:
+	$(MAKE) -f hikey960.mk
 
-l-loader.bin: start.o $(BL1)
-	$(LD) -Bstatic -Tl-loader.lds -Ttext 0xf9800800 start.o -o loader
-	$(OBJCOPY) -O binary loader temp
-	python gen_loader_hikey.py -o $@ --img_loader=temp --img_bl1=$(BL1) --img_ns_bl1u=recovery-fastboot.bin
-	rm -f loader temp
-
-ptable.img:
-	for ptable in $(PTABLE_LST); do \
-		sudo PTABLE=$${ptable} bash -x generate_ptable.sh;\
-		python gen_loader.py -o ptable-$${ptable}.img --img_prm_ptable=prm_ptable.img;\
-	done
-
-clean:
-	rm -f *.o *.img l-loader.bin
+.PHONY: hikey960-clean
+hikey960-clean:
+	$(MAKE) -f hikey960.mk clean
