hikey: hikey960: Make /sys/kernel/debug readable non-root processes
Bug: 65159511
Test: Manual

Change-Id: Ib1b9aeb0afd13ad7c5479a2a84e39efa65c563e7
Signed-off-by: Dmitry Shmidt <dimitrysh@google.com>

--- a/init.common.rc
+++ b/init.common.rc
@@ -3,7 +3,7 @@ import init.${ro.hardware}.power.rc
 
 on init
     # mount debugfs
-    mount debugfs /sys/kernel/debug /sys/kernel/debug
+    mount debugfs /sys/kernel/debug /sys/kernel/debug mode=755
 
     # disable transparent huge pages
     write /sys/kernel/mm/transparent_hugepage/enabled "never"
