--- a/ueventd.common.rc
+++ b/ueventd.common.rc
@@ -1,3 +1,6 @@
+subsystem usbmisc
+    devname uevent_devname
+
 /dev/hci_tty     0666 root root
 /dev/ttyAMA1     0660 bluetooth bluetooth
 /dev/ttyAMA4     0660 bluetooth bluetooth
