hikey: Force Rotation Lock
Since the HiKey are mostly used with HDMI displays, its annoying to get
the rotation back to default if an app decides to force change it.
This patch allows the rotation to reset once the app has
exited/minimised

Test: Manual, with apps like Androbench that force rotation to portrait

Change-Id: I5d90aed2a9ef9a150151bfc6a54bc99e4ce60bce
Signed-off-by: Sahaj Sarup <sahajsarup@gmail.com>

--- a/init.common.rc
+++ b/init.common.rc
@@ -50,6 +50,8 @@ on post-fs
 # Set supported opengles version
     setprop ro.opengles.version 196608
 
+# If an app forces screen rotation, revert it once the apps closes
+    setprop persist.demo.rotationlock 1
 
 # enable Google-specific location features,
 # like NetworkLocationProvider and LocationCollector
