hikey960: Add hifi_misc support
Bug: 64395692
Test: Manual

Change-Id: If24a7d1f881138f5d4f7ab0c3f80ac3f7b014581
Signed-off-by: Dmitry Shmidt <dimitrysh@google.com>

--- a/ueventd.common.rc
+++ b/ueventd.common.rc
@@ -6,3 +6,4 @@ subsystem usbmisc
 /dev/ttyAMA4     0660 bluetooth bluetooth
 /dev/mali        0666 system graphics
 /dev/mali0       0666 system graphics
+/dev/hifi_misc   0666 system audio
