hikey: Add support for contexthub hal and neonkey / argonkey sensor hal
Compile: make TARGET_SENSOR_MEZZANINE=<mezzanine_name>
         (<mezzanine_name> can be neonkey or argonkey)

Test: builds
Change-Id: I11c2734965b96cb34aef7558b7c822d0e5ea5c65
Signed-off-by: Ben Fennema <fennema@google.com>

--- a/ueventd.common.rc
+++ b/ueventd.common.rc
@@ -6,4 +6,6 @@ subsystem usbmisc
 /dev/ttyAMA4     0660 bluetooth bluetooth
 /dev/mali        0666 system graphics
 /dev/mali0       0666 system graphics
+/dev/nanohub              0660   system     system
+/dev/nanohub_comms        0660   system     system
 /dev/hifi_misc   0666 system audio
