--- a/init.hikey960.power.rc
+++ b/init.hikey960.power.rc
@@ -16,6 +16,8 @@ on post-fs
     chown system system /dev/stune/foreground/schedtune.boost
     chown system system /dev/stune/foreground/schedtune.prefer_idle
     chown system system /dev/stune/schedtune.boost
+    chown system system /sys/class/devfreq/ddr_devfreq/min_freq
+    chown system system /sys/class/devfreq/e82c0000.mali/min_freq
 
     write /dev/stune/top-app/schedtune.boost 50
     write /dev/stune/top-app/schedtune.prefer_idle 1
@@ -30,3 +32,9 @@ on post-fs
     setprop ro.config.cpufreq.low_power_max.cluster0 "999000"
     setprop ro.config.cpufreq.max_freq.cluster1 "/sys/devices/system/cpu/cpu4/cpufreq/scaling_max_freq"
     setprop ro.config.cpufreq.low_power_max.cluster1 "903000"
+
+    setprop ro.config.devfreq.ddr.min_freq.path "/sys/class/devfreq/ddr_devfreq/min_freq"
+    setprop ro.config.devfreq.ddr.min_freq.boost "685000000"
+
+    setprop ro.config.devfreq.gpu.min_freq.path "/sys/class/devfreq/e82c0000.mali/min_freq"
+    setprop ro.config.devfreq.gpu.min_freq.boost "960000000"
