Support for hikey970

--- a/uefi-tools/platforms.config
+++ b/uefi-tools/platforms.config
@@ -232,6 +232,22 @@ SCP_BIN=OpenPlatformPkg/Platforms/Hisilicon/HiKey960/Binary/lpm3.img
 # Uncomment this to use UART5 as the EDK2 console for v1 hardware
 #BUILDFLAGS=-DSERIAL_BASE=0xFDF05000
 
+[hikey970]
+LONGNAME=Hikey970
+DSC=OpenPlatformPkg/Platforms/Hisilicon/HiKey970/HiKey970.dsc
+ARCH=AARCH64
+UEFI_BIN=BL33_AP_UEFI.fd
+UEFI_IMAGE_DIR=HiKey970
+BUILD_ATF=yes
+ATF_SPD=opteed
+TOS_BIN=tee-pager.bin
+TOS_PLATFORM=hikey
+TOS_PLATFORM_FLAVOR=hikey970
+BUILD_TOS=yes
+SCP_BIN=OpenPlatformPkg/Platforms/Hisilicon/HiKey970/Binary/lpm3.img
+# Uncomment this to use UART5 as the EDK2 console for v1 hardware
+#BUILDFLAGS=-DSERIAL_BASE=0xFDF05000
+
 [xen64]
 LONGNAME=AArch64 Xen guest
 BUILDFLAGS=
